Bugfix: autocomplete of password is now working on firefox.

--- a/elyoos/client/app/sass/elyoos/public/_login.scss
+++ b/elyoos/client/app/sass/elyoos/public/_login.scss
@@ -51,6 +51,51 @@
     color: $tooltip-error;
     margin-bottom: 12px;
   }
+
+  #loginbutton {
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
+    color: rgba(255,255,255,0.87);
+    background-color: rgb(63,81,181);
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+    min-height: 36px;
+    min-width: 88px;
+    line-height: 36px;
+    vertical-align: middle;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-grid-row-align: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 3px;
+    box-sizing: border-box;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 0;
+    padding: 0 6px;
+    margin: 6px 8px;
+    white-space: nowrap;
+    font-weight: 500;
+    font-size: 14px;
+    font-style: inherit;
+    font-variant: inherit;
+    font-family: inherit;
+    text-decoration: none;
+    overflow: hidden;
+    -webkit-transition: box-shadow .4s cubic-bezier(.25,.8,.25,1),background-color .4s cubic-bezier(.25,.8,.25,1);
+    transition: box-shadow .4s cubic-bezier(.25,.8,.25,1),background-color .4s cubic-bezier(.25,.8,.25,1);
+  }
+
+  #loginbutton[disabled] {
+    background-color: rgba(0,0,0,0.12);
+    color: rgba(0,0,0,0.38);
+    cursor: default;
+    text-transform: none !important;
+
+  }
 }
 
 
